# android-build-tools

./: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/expat/: CMakeLists.txt
cmake/lib/libziparchive/: CMakeLists.txt
cmake/lib/zlib/: CMakeLists.txt
download/: prepare.sh
